// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ImageWrapper /> should render and match the snapshot 1`] = `
.c0 {
  margin: 4.5rem 0;
  text-align: center;
}

@media (max-width:424px) {
  .c0 {
    height: 90px;
    width: 160px;
  }
}

@media (max-width:767px) {
  .c0 {
    height: 900px;
    width: 1600px;
  }
}

<div
  className="c0"
/>
`;

exports[`<ImageWrapper /> should render without any props given 1`] = `
.c0 {
  margin: 4.5rem 0;
  text-align: center;
}

<div
  className="c0"
/>
`;
